--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react-component"
   ],
   "peerDependencies": {
-    "draft-js": ">=0.5.0",
+    "draft-js": ">=0.7.0",
     "immutable": ">=3.7.6",
-    "react": ">=0.14.0 || 15.0.0-rc",
+    "react": ">=0.14.0 || 15.1.0",
     "react-dom": ">=0.14.0 || 15.0.0-rc"
   },
   "scripts": {
