--- a/package.json
+++ b/package.json
@@ -22,12 +22,6 @@
     "widget",
     "react-component"
   ],
-  "peerDependencies": {
-    "draft-js": ">=0.7.0",
-    "immutable": ">=3.8.1",
-    "react": ">=15.1.0",
-    "react-dom": ">=15.1.0"
-  },
   "scripts": {
     "clean": "../node_modules/.bin/rimraf lib",
     "build": "npm run clean && npm run build:js && npm run build:css",
@@ -39,6 +33,10 @@
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
     "find-with-regex": "^1.0.2",
-    "union-class-names": "^1.0.0"
+    "union-class-names": "^1.0.0",
+    "draft-js": ">=0.7.0",
+    "immutable": ">=3.8.1",
+    "react": ">=15.1.0",
+    "react-dom": ">=15.1.0"
   }
 }
