--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-mention-plugin",
-  "version": "1.1.2",
+  "version": "2.0.0-beta1",
   "description": "Mention Plugin for DraftJS",
   "author": {
     "name": "Nik Graf",
