--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "license": "MIT",
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
-    "find-with-regex": "^1.0.2",
-    "union-class-names": "^1.0.0",
     "draft-js": ">=0.7.0",
+    "find-with-regex": "^1.0.2",
     "immutable": ">=3.8.1",
+    "lodash": "4.15.0",
     "react": ">=15.1.0",
-    "react-dom": ">=15.1.0"
+    "react-dom": ">=15.1.0",
+    "union-class-names": "^1.0.0"
   }
 }
