--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "draft-js": ">=0.7.0",
     "find-with-regex": "^1.0.2",
     "immutable": ">=3.8.1",
-    "lodash": "4.15.0",
+    "lodash.escaperegexp": "^4.1.2",
     "react": ">=15.1.0",
     "react-dom": ">=15.1.0",
     "union-class-names": "^1.0.0"
