upgrade to beta5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draft-js-mention-plugin",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0-beta5",
   "description": "Mention Plugin for DraftJS",
   "author": {
     "name": "Nik Graf",
