--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
-    "draft-js": ">=0.8.1",
+    "draft-js": "^0.9.1",
     "find-with-regex": "^1.0.2",
     "immutable": ">=3.8.1",
     "lodash.escaperegexp": "^4.1.2",
