--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "decorate-component-with-props": "^1.0.2",
     "draft-js": ">=0.9.1",
     "find-with-regex": "^1.0.2",
-    "immutable": ">=3.8.1",
+    "immutable": "~3.7.4",
     "lodash.escaperegexp": "^4.1.2",
     "react": ">=15.3.1",
     "react-dom": ">=15.3.1",
