--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "draft-js-mention-plugin",
-  "version": "2.0.0-custom1",
+  "name": "draft-js-mention-plugin-custom-ld",
+  "version": "2.0.0-beta9",
   "description": "Mention Plugin for DraftJS",
   "author": {
     "name": "Nik Graf",
